Fix bug that made header buttons invisible

--- a/main.css
+++ b/main.css
@@ -8,7 +8,7 @@
     --yellow: #fff455;
 }
 
-nav-list {
+.nav-list {
     list-style-type: none;
     margin: 0;
     padding: 0;
